--- a/src/main/resources/com/example/alchemyx/inventory.fxml
+++ b/src/main/resources/com/example/alchemyx/inventory.fxml
@@ -53,25 +53,25 @@
                      </stylesheets>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" onAction="#switchToHome" prefHeight="44.0" prefWidth="128.0" style="-fx-background-color: transparent;" styleClass="recipes" stylesheets="@../../../../java/com/example/alchemyx/style/Recipes.css">
+                  <Button mnemonicParsing="false" prefHeight="44.0" prefWidth="128.0" style="-fx-background-color: transparent;" styleClass="recipes" stylesheets="@../../../../java/com/example/alchemyx/style/Recipes.css">
                      <VBox.margin>
                         <Insets bottom="3.0" left="15.0" top="5.0" />
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="customers" stylesheets="@../../../../java/com/example/alchemyx/style/Customers.css">
+                  <Button mnemonicParsing="false" onAction="#switchToCustomers" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="customers" stylesheets="@../../../../java/com/example/alchemyx/style/Customers.css">
                      <VBox.margin>
                         <Insets left="15.0" top="5.0" />
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="supliers" stylesheets="@../../../../java/com/example/alchemyx/style/supliers.css">
+                  <Button mnemonicParsing="false" onAction="#switchToSuppliers" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="supliers" stylesheets="@../../../../java/com/example/alchemyx/style/supliers.css">
                      <VBox.margin>
                         <Insets left="15.0" top="7.0" />
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="orders" stylesheets="@../../../../java/com/example/alchemyx/style/orders.css">
+                  <Button mnemonicParsing="false" onAction="#switchToOrders" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="orders" stylesheets="@../../../../java/com/example/alchemyx/style/orders.css">
                      <VBox.margin>
                         <Insets left="15.0" top="7.0" />
                      </VBox.margin>
@@ -156,7 +156,7 @@
                </fill>
             </Text>
             <TextField fx:id="searchKeywords" layoutX="104.0" layoutY="73.0" prefHeight="25.0" prefWidth="477.0" promptText="Keywords" />
-            <AnchorPane layoutX="588.0" layoutY="113.0" prefHeight="484.0" prefWidth="318.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0); -fx-border-color: D3D3D3; -fx-border-radius: 20px;" stylesheets="@../../../../java/com/example/alchemyx/style/controlPanel.css">
+            <AnchorPane layoutX="588.0" layoutY="113.0" prefHeight="484.0" prefWidth="318.0" style="-fx-border-color: D3D3D3; -fx-border-radius: 20px;" stylesheets="@../../../../java/com/example/alchemyx/style/controlPanel.css">
                <children>
                   <Label layoutX="70.0" layoutY="14.0" text="Enter product details">
                      <font>
@@ -186,12 +186,12 @@
                   </TextField>
                   <Label layoutX="25.0" layoutY="77.0" prefHeight="17.0" prefWidth="91.0" text="Item Name" textFill="#3f105b">
                      <font>
-                        <Font size="15.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                   <Label layoutX="25.0" layoutY="119.0" prefHeight="17.0" prefWidth="91.0" text="Item Type" textFill="#3f105b">
                      <font>
-                        <Font size="15.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                   <TextField fx:id="quantityDetails" layoutX="128.0" layoutY="157.0" prefHeight="25.0" prefWidth="181.0">
@@ -201,55 +201,50 @@
                   </TextField>
                   <Label layoutX="25.0" layoutY="159.0" prefHeight="17.0" prefWidth="91.0" text="Quantity" textFill="#3f105b">
                      <font>
-                        <Font size="15.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                   <Label layoutX="25.0" layoutY="200.0" prefHeight="17.0" prefWidth="91.0" text="Description" textFill="#3f105b">
                      <font>
-                        <Font size="15.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
-                  <Button fx:id="addItem" layoutX="14.0" layoutY="338.0" mnemonicParsing="false" onAction="#addNewItem" prefHeight="31.0" prefWidth="91.0" text="Add">
+                  <Button fx:id="addItem" layoutX="14.0" layoutY="338.0" mnemonicParsing="false" onAction="#addNewItem" prefHeight="31.0" prefWidth="91.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" styleClass="button-81" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Add" textFill="#3f105b">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="updateItem" layoutX="117.0" layoutY="338.0" mnemonicParsing="false" onAction="#updateItemTable" prefHeight="31.0" prefWidth="91.0" text="Update">
+                  <Button fx:id="updateItem" layoutX="117.0" layoutY="338.0" mnemonicParsing="false" onAction="#updateItemTable" prefHeight="31.0" prefWidth="91.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" styleClass="button-81" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Update" textFill="#3f105b">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="deleteItem" layoutX="219.0" layoutY="338.0" mnemonicParsing="false" onAction="#deleteItemTable" prefHeight="31.0" prefWidth="91.0" text="Delete">
+                  <Button fx:id="deleteItem" layoutX="219.0" layoutY="338.0" mnemonicParsing="false" onAction="#deleteItemTable" prefHeight="31.0" prefWidth="91.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" styleClass="button-81" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Delete" textFill="#3f105b">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="clearDetails" layoutX="15.0" layoutY="391.0" mnemonicParsing="false" onAction="#clearDetails" prefHeight="34.0" prefWidth="296.0" text="CLEAR">
+                  <Button fx:id="clearDetails" layoutX="15.0" layoutY="391.0" mnemonicParsing="false" onAction="#clearDetails" prefHeight="34.0" prefWidth="296.0" styleClass="button-62" stylesheets="@../../../../java/com/example/alchemyx/style/buttonStyle.css" text="CLEAR">
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <ComboBox fx:id="itemTypeDetails" layoutX="129.0" layoutY="117.0" prefHeight="31.0" prefWidth="180.0" promptText="Select Type" />
-                  <TextArea fx:id="descriptionDetails" layoutX="132.0" layoutY="195.0" prefHeight="125.0" prefWidth="176.0" />
+                  <ComboBox fx:id="itemTypeDetails" layoutX="129.0" layoutY="117.0" prefHeight="31.0" prefWidth="180.0" promptText="Select Type" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" />
+                  <TextArea fx:id="descriptionDetails" layoutX="129.0" layoutY="195.0" prefHeight="125.0" prefWidth="179.0" />
                </children>
             </AnchorPane>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="78.0" fitWidth="81.0" layoutX="724.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="78.0" fitWidth="81.0" layoutX="897.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../java/com/example/alchemyx/style/profile.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="16.0" layoutX="709.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="18.0" fitWidth="16.0" layoutX="882.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../java/com/example/alchemyx/style/notification.png" />
          </image>
       </ImageView>
-      <Label fx:id="userName" layoutX="798.0" layoutY="19.0" prefHeight="26.0" prefWidth="178.0">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
-      <Button fx:id="logOutButton" layoutX="985.0" layoutY="19.0" mnemonicParsing="false" onAction="#setLogOut" prefHeight="20.0" prefWidth="100.0" style="-fx-background-color: transparent;" styleClass="logout" stylesheets="@../../../../java/com/example/alchemyx/style/logout.css" />
+      <Button fx:id="logOutButton" layoutX="986.0" layoutY="17.0" mnemonicParsing="false" onAction="#setLogOut" prefHeight="31.0" prefWidth="100.0" style="-fx-background-color: transparent;" styleClass="logout" stylesheets="@../../../../java/com/example/alchemyx/style/logout.css" />
    </children>
 </AnchorPane>
