--- a/src/main/resources/com/example/alchemyx/orders.fxml
+++ b/src/main/resources/com/example/alchemyx/orders.fxml
@@ -4,7 +4,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -19,6 +23,158 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1100.0" style="-fx-background-color: white;" stylesheets="@../../../../java/com/example/alchemyx/style/rectangle.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.alchemyx.Orders">
    <children>
+      <AnchorPane layoutX="181.0" layoutY="59.0" prefHeight="575.0" prefWidth="795.0" styleClass="dashboard" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="59.0">
+         <stylesheets>
+            <URL value="@../../../../java/com/example/alchemyx/style/dashboard.css" />
+            <URL value="@../../../../java/com/example/alchemyx/style/rectangle.css" />
+         </stylesheets>
+         <children>
+            <Text layoutX="14.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Orders" wrappingWidth="108.0244140625">
+               <font>
+                  <Font name="Arial" size="30.0" />
+               </font>
+               <fill>
+                  <LinearGradient endX="0.5402843601895735" endY="1.0" startX="0.4928909952606635">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.1882352977991104" green="0.23137255012989044" blue="0.5686274766921997" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="0.3843137323856354" green="0.18039216101169586" blue="0.572549045085907" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Text>
+            <TableView fx:id="ordersTableView" layoutX="14.0" layoutY="127.0" prefHeight="476.0" prefWidth="574.0" style="-fx-border-color: #F3F3F3; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);">
+              <columns>
+                <TableColumn fx:id="idColumn" prefWidth="34.39996337890625" text="ID" />
+                  <TableColumn fx:id="itemNameColumn" prefWidth="127.20001220703125" text="Item Name" />
+                  <TableColumn fx:id="itemTypeColumn" minWidth="0.0" prefWidth="96.79995727539062" text="Item Type" />
+                  <TableColumn fx:id="quantityColumn" minWidth="1.5999755859375" prefWidth="74.39999389648438" text="Quantity" />
+                  <TableColumn fx:id="orderDateColumn" prefWidth="112.0" text="Order Date" />
+                  <TableColumn fx:id="statusColumn" prefWidth="128.0" text="Status" />
+              </columns>
+            </TableView>
+            <Label layoutX="14.0" layoutY="75.0" text="Search ">
+               <font>
+                  <Font name="Arial Bold" size="20.0" />
+               </font>
+               <textFill>
+                  <LinearGradient endX="0.4881516587677725" endY="1.0" startX="0.46919431279620855">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.22745098173618317" green="0.019607843831181526" blue="0.5490196347236633" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="0.22745098173618317" green="0.019607843831181526" blue="0.5490196347236633" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </textFill>
+            </Label>
+            <TextField fx:id="keywordTextField" layoutX="96.0" layoutY="74.0" prefHeight="26.0" prefWidth="478.0" promptText="Keywords..." />
+            <AnchorPane layoutX="599.0" layoutY="127.0" prefHeight="476.0" prefWidth="310.0" style="-fx-border-color: D3D3D3; -fx-border-radius: 20px;">
+               <children>
+                  <Label layoutX="25.0" layoutY="56.0" text="Item name" textFill="#3f105b">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="26.0" layoutY="107.0" text="Item type" textFill="#3f105b">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="28.0" layoutY="157.0" text="Quantity" textFill="#3f105b">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="29.0" layoutY="263.0" text="Status" textFill="#3f105b">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="itemNameDetails" layoutX="105.0" layoutY="51.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </TextField>
+                  <TextField fx:id="quantityDetails" layoutX="105.0" layoutY="151.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </TextField>
+                  <TextField fx:id="statusDetails" layoutX="107.0" layoutY="258.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </TextField>
+                  <ComboBox fx:id="itemTypeDetails" layoutX="105.0" layoutY="102.0" prefHeight="31.0" prefWidth="186.0" promptText="Select Type" />
+                  <Button fx:id="addItem" layoutX="9.0" layoutY="340.0" mnemonicParsing="false" onAction="#addNewItem" prefHeight="31.0" prefWidth="81.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" styleClass="button-81" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Add" textFill="#3f105b">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="updateItem" layoutX="109.0" layoutY="340.0" mnemonicParsing="false" onAction="#updateItemTable" prefHeight="40.0" prefWidth="92.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Update" textFill="#3f105b">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="deleteItem" layoutX="210.0" layoutY="340.0" mnemonicParsing="false" onAction="#deleteItemTable" prefHeight="40.0" prefWidth="92.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Delete" textFill="#3f105b">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="clearDetails" layoutX="13.0" layoutY="402.0" mnemonicParsing="false" onAction="#clearDetails" prefHeight="47.0" prefWidth="283.0" styleClass="button-62" stylesheets="@../../../../java/com/example/alchemyx/style/buttonStyle.css" text="Clear">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Button>
+                  <Label layoutX="24.0" layoutY="207.0" text="Order date" textFill="#3f105b">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="orderDateDetails" layoutX="106.0" layoutY="202.0">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </TextField>
+                  <Label layoutX="62.0" layoutY="14.0" prefHeight="23.0" prefWidth="186.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" text="Enter order details">
+                     <font>
+                        <Font name="Arial Bold" size="20.0" />
+                     </font>
+                     <textFill>
+                        <LinearGradient endX="0.4881516587677725" endY="1.0" startX="0.46919431279620855">
+                           <stops>
+                              <Stop>
+                                 <color>
+                                    <Color red="0.22745098173618317" green="0.019607843831181526" blue="0.5490196347236633" />
+                                 </color>
+                              </Stop>
+                              <Stop offset="1.0">
+                                 <color>
+                                    <Color red="0.22745098173618317" green="0.019607843831181526" blue="0.5490196347236633" />
+                                 </color>
+                              </Stop>
+                           </stops>
+                        </LinearGradient>
+                     </textFill>
+                  </Label>
+               </children>
+            </AnchorPane>
+         </children>
+      </AnchorPane>
       <Pane prefHeight="643.0" prefWidth="181.0" style="-fx-background-color: linear-gradient(to bottom, #303B91 0%, #622E92 100%);" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <VBox prefHeight="643.0" prefWidth="181.0">
@@ -42,7 +198,7 @@
                      </stylesheets>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="140.0" style="-fx-background-color: transparent;" styleClass="buttonInventory" stylesheets="@../../../../java/com/example/alchemyx/style/ButtonInventory.css">
+                  <Button mnemonicParsing="false" onAction="#switchToInventory" prefHeight="33.0" prefWidth="140.0" style="-fx-background-color: transparent;" styleClass="buttonInventory" stylesheets="@../../../../java/com/example/alchemyx/style/ButtonInventory.css">
                      <VBox.margin>
                         <Insets bottom="10.0" left="15.0" top="10.0" />
                      </VBox.margin>
@@ -54,13 +210,13 @@
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="customers" stylesheets="@../../../../java/com/example/alchemyx/style/Customers.css">
+                  <Button mnemonicParsing="false" onAction="#switchToCustomers" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="customers" stylesheets="@../../../../java/com/example/alchemyx/style/Customers.css">
                      <VBox.margin>
                         <Insets left="15.0" top="5.0" />
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="supliers" stylesheets="@../../../../java/com/example/alchemyx/style/supliers.css">
+                  <Button mnemonicParsing="false" onAction="#switchToSuppliers" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="supliers" stylesheets="@../../../../java/com/example/alchemyx/style/supliers.css">
                      <VBox.margin>
                         <Insets left="15.0" top="7.0" />
                      </VBox.margin>
@@ -97,49 +253,20 @@
             </VBox>
          </children>
       </Pane>
-      <AnchorPane layoutX="181.0" layoutY="59.0" prefHeight="575.0" prefWidth="795.0" styleClass="dashboard" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="59.0">
-         <stylesheets>
-            <URL value="@../../../../java/com/example/alchemyx/style/dashboard.css" />
-            <URL value="@../../../../java/com/example/alchemyx/style/rectangle.css" />
-         </stylesheets>
-         <children>
-            <Text layoutX="56.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Orders" wrappingWidth="108.0244140625">
-               <font>
-                  <Font name="Arial" size="30.0" />
-               </font>
-               <fill>
-                  <LinearGradient endX="0.5402843601895735" endY="1.0" startX="0.4928909952606635">
-                     <stops>
-                        <Stop>
-                           <color>
-                              <Color red="0.1882352977991104" green="0.23137255012989044" blue="0.5686274766921997" />
-                           </color>
-                        </Stop>
-                        <Stop offset="1.0">
-                           <color>
-                              <Color red="0.3843137323856354" green="0.18039216101169586" blue="0.572549045085907" />
-                           </color>
-                        </Stop>
-                     </stops>
-                  </LinearGradient>
-               </fill>
-            </Text>
-         </children>
-      </AnchorPane>
-      <ImageView fitHeight="78.0" fitWidth="81.0" layoutX="805.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="78.0" fitWidth="81.0" layoutX="891.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../java/com/example/alchemyx/style/profile.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="16.0" layoutX="790.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="18.0" fitWidth="16.0" layoutX="876.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../java/com/example/alchemyx/style/notification.png" />
          </image>
       </ImageView>
-      <Label layoutX="879.0" layoutY="23.0" prefHeight="21.0" prefWidth="108.0" text="Label">
+      <Button fx:id="logOutButton" layoutX="979.0" layoutY="11.0" mnemonicParsing="false" onAction="#setLogOut" prefHeight="43.0" prefWidth="107.0" style="-fx-background-color: transparent;" styleClass="logout" stylesheets="@../../../../java/com/example/alchemyx/style/logout.css">
          <font>
             <Font size="15.0" />
          </font>
-      </Label>
+      </Button>
    </children>
 </AnchorPane>
