--- a/src/main/resources/com/example/alchemyx/suppliers.fxml
+++ b/src/main/resources/com/example/alchemyx/suppliers.fxml
@@ -5,6 +5,9 @@
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -32,21 +35,15 @@
                      </VBox.margin>
                   </ImageView>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" onAction="#switchToHome" prefHeight="43.0" prefWidth="133.0" style="-fx-background-color: transparent;" styleClass="ButtonHome" stylesheets="@../../../../java/com/example/alchemyx/style/ButtonHome.css">
+                  <Button mnemonicParsing="false" onAction="#switchToHome" prefHeight="43.0" prefWidth="133.0" style="-fx-background-color: transparent;" styleClass="home" stylesheets="@../../../../java/com/example/alchemyx/style/mainButtons.css">
                      <VBox.margin>
-                        <Insets bottom="5.0" top="5.0" />
+                        <Insets bottom="5.0" left="6.0" top="5.0" />
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="33.0" prefWidth="140.0" style="-fx-background-color: transparent;" styleClass="buttonInventory" stylesheets="@../../../../java/com/example/alchemyx/style/ButtonInventory.css">
+                  <Button mnemonicParsing="false" onAction="#switchToInventory" prefHeight="33.0" prefWidth="140.0" style="-fx-background-color: transparent;" styleClass="buttonInventory" stylesheets="@../../../../java/com/example/alchemyx/style/ButtonInventory.css">
                      <VBox.margin>
                         <Insets bottom="10.0" left="15.0" top="10.0" />
-                     </VBox.margin>
-                  </Button>
-                  <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="47.0" prefWidth="135.0" style="-fx-background-color: transparent;" styleClass="productButton" stylesheets="@../../../../java/com/example/alchemyx/style/ProductButton.css">
-                     <VBox.margin>
-                        <Insets bottom="3.0" left="10.0" top="3.0" />
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
@@ -56,19 +53,19 @@
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="customers" stylesheets="@../../../../java/com/example/alchemyx/style/Customers.css">
+                  <Button mnemonicParsing="false" onAction="#switchToCustomers" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="customers" stylesheets="@../../../../java/com/example/alchemyx/style/Customers.css">
                      <VBox.margin>
                         <Insets left="15.0" top="5.0" />
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="supliers" stylesheets="@../../../../java/com/example/alchemyx/style/supliers.css">
+                  <Button mnemonicParsing="false" prefHeight="84.0" prefWidth="146.0" style="-fx-background-color: transparent;" styleClass="suppliers" stylesheets="@../../../../java/com/example/alchemyx/style/mainButtons.css">
                      <VBox.margin>
-                        <Insets left="15.0" top="7.0" />
+                        <Insets bottom="-15.0" left="5.0" top="-5.0" />
                      </VBox.margin>
                   </Button>
                   <Line endX="79.0" startX="-100.0" style="-fx-stroke: white;" />
-                  <Button mnemonicParsing="false" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="orders" stylesheets="@../../../../java/com/example/alchemyx/style/orders.css">
+                  <Button mnemonicParsing="false" onAction="#switchToOrders" prefHeight="50.0" prefWidth="125.0" style="-fx-background-color: transparent;" styleClass="orders" stylesheets="@../../../../java/com/example/alchemyx/style/orders.css">
                      <VBox.margin>
                         <Insets left="15.0" top="7.0" />
                      </VBox.margin>
@@ -95,50 +92,15 @@
             </VBox>
          </children>
       </Pane>
-      <AnchorPane layoutX="181.0" layoutY="59.0" prefHeight="575.0" prefWidth="795.0" styleClass="dashboard" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="59.0">
+      <AnchorPane layoutX="181.0" layoutY="67.0" prefHeight="575.0" prefWidth="795.0" styleClass="dashboard" AnchorPane.bottomAnchor="-8.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="67.0">
          <stylesheets>
             <URL value="@../../../../java/com/example/alchemyx/style/dashboard.css" />
             <URL value="@../../../../java/com/example/alchemyx/style/rectangle.css" />
          </stylesheets>
          <children>
-            <Pane layoutX="48.0" layoutY="87.0" maxHeight="215.0" maxWidth="382.0" minHeight="200.0" minWidth="356.0" prefHeight="214.0" prefWidth="382.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0, 0, 2);" styleClass="background" stylesheets="@../../../../java/com/example/alchemyx/style/rectangle.css" AnchorPane.bottomAnchor="340.0" AnchorPane.leftAnchor="48.0" AnchorPane.rightAnchor="489.0" AnchorPane.topAnchor="87.0">
-               <children>
-                  <Label layoutX="70.0" layoutY="76.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="225.0" layoutY="76.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="225.0" layoutY="162.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="66.0" layoutY="163.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-               </children>
-            </Pane>
-            <Pane layoutX="486.0" layoutY="87.0" maxHeight="245.0" maxWidth="430.0" minHeight="200.0" minWidth="356.0" prefHeight="214.0" prefWidth="382.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0, 0, 2);" styleClass="purchase" stylesheets="@../../../../java/com/example/alchemyx/style/purchase.css">
-               <children>
-                  <Label layoutX="79.0" layoutY="74.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="234.0" layoutY="74.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="234.0" layoutY="160.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="75.0" layoutY="161.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-               </children>
-            </Pane>
-            <Pane layoutX="40.0" layoutY="341.0" maxHeight="215.0" maxWidth="382.0" minHeight="200.0" minWidth="274.0" prefHeight="214.0" prefWidth="274.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0, 0, 2);" styleClass="summary" stylesheets="@../../../../java/com/example/alchemyx/style/summary.css">
-               <children>
-                  <Label layoutX="32.0" layoutY="133.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="152.0" layoutY="134.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-               </children>
-            </Pane>
-            <Pane layoutX="324.0" layoutY="341.0" maxHeight="215.0" maxWidth="382.0" minHeight="200.0" minWidth="274.0" prefHeight="214.0" prefWidth="274.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0, 0, 2);" styleClass="details" stylesheets="@../../../../java/com/example/alchemyx/style/details.css">
-               <children>
-                  <Label layoutX="187.0" layoutY="99.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="186.0" layoutY="54.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="187.0" layoutY="154.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-               </children>
-            </Pane>
-            <Pane layoutX="606.0" layoutY="341.0" maxHeight="215.0" maxWidth="382.0" minHeight="200.0" minWidth="274.0" prefHeight="214.0" prefWidth="274.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0, 0, 2);" styleClass="userss" stylesheets="@../../../../java/com/example/alchemyx/style/userss.css">
-               <children>
-                  <Label layoutX="34.0" layoutY="137.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-                  <Label layoutX="154.0" layoutY="138.0" prefHeight="21.0" prefWidth="69.0" text="Label" />
-               </children>
-            </Pane>
-            <Text layoutX="56.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Home" wrappingWidth="108.0244140625">
+            <Text layoutX="14.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Suppliers" wrappingWidth="119.0">
                <font>
-                  <Font name="Arial" size="30.0" />
+                  <Font name="Arial" size="25.0" />
                </font>
                <fill>
                   <LinearGradient endX="0.5402843601895735" endY="1.0" startX="0.4928909952606635">
@@ -157,22 +119,84 @@
                   </LinearGradient>
                </fill>
             </Text>
+            <TableView fx:id="suppliersTableView" layoutX="14.0" layoutY="105.0" onMouseClicked="#updateItemView" prefHeight="432.0" prefWidth="621.0" style="-fx-border-color: #F3F3F3; -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0); -fx-border-radius: 1px;">
+              <columns>
+                <TableColumn fx:id="IdTableColumn" prefWidth="47.0" text="Id" />
+                <TableColumn fx:id="NameTableColumn" prefWidth="116.0" text="Name" />
+                  <TableColumn fx:id="CategoryTableColumn" prefWidth="109.0" text="Category" />
+                  <TableColumn fx:id="ContactPersonTableColumn" prefWidth="127.0" text="Contact Person" />
+                  <TableColumn fx:id="CityTableColumn" prefWidth="100.0" text="City" />
+                  <TableColumn fx:id="CountryTableColumn" prefWidth="120.0" text="Country" />
+              </columns>
+            </TableView>
+            <Text layoutX="14.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search" wrappingWidth="99.0244140625">
+               <font>
+                  <Font name="Arial" size="20.0" />
+               </font>
+               <fill>
+                  <LinearGradient endX="0.5402843601895735" endY="1.0" startX="0.4928909952606635">
+                     <stops>
+                        <Stop>
+                           <color>
+                              <Color red="0.1882352977991104" green="0.23137255012989044" blue="0.5686274766921997" />
+                           </color>
+                        </Stop>
+                        <Stop offset="1.0">
+                           <color>
+                              <Color red="0.3843137323856354" green="0.18039216101169586" blue="0.572549045085907" />
+                           </color>
+                        </Stop>
+                     </stops>
+                  </LinearGradient>
+               </fill>
+            </Text>
+            <TextField fx:id="KeywordTextField" layoutX="120.0" layoutY="64.0" prefHeight="26.0" prefWidth="516.0" promptText="Keywords" />
+            <Button fx:id="clearbtn" layoutX="83.0" layoutY="552.0" mnemonicParsing="false" onAction="#clearDetails" prefHeight="35.0" prefWidth="100.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" styleClass="button-62" stylesheets="@../../../../java/com/example/alchemyx/style/buttonStyle.css" text="Clear" textFill="#3f105b" />
+            <Label layoutX="688.0" layoutY="106.0" text="Id" textFill="#3f105b">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <Label layoutX="690.0" layoutY="172.0" text="Name" textFill="#3f105b">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <Label layoutX="690.0" layoutY="235.0" text="Category" textFill="#3f105b">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <Label layoutX="690.0" layoutY="312.0" text="Contact Person" textFill="#3f105b">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <Label layoutX="690.0" layoutY="390.0" text="City" textFill="#3f105b">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <Label layoutX="690.0" layoutY="472.0" text="Country" textFill="#3f105b">
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <TextField fx:id="idtxb" layoutX="690.0" layoutY="137.0" />
+            <TextField fx:id="nametxb" layoutX="689.0" layoutY="201.0" />
+            <TextField fx:id="categorytxb" layoutX="690.0" layoutY="264.0" />
+            <TextField fx:id="contactpersontxb" layoutX="690.0" layoutY="341.0" />
+            <TextField fx:id="citytxb" layoutX="690.0" layoutY="425.0" />
+            <TextField fx:id="countrytxb" layoutX="690.0" layoutY="509.0" />
+            <Button fx:id="addbtn" layoutX="209.0" layoutY="552.0" mnemonicParsing="false" onAction="#addNewSupplier" prefHeight="35.0" prefWidth="100.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Add" textFill="#3f105b" />
+            <Button fx:id="deletebtn" layoutX="335.0" layoutY="552.0" mnemonicParsing="false" onAction="#deleteItemTable" prefHeight="35.0" prefWidth="100.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Delete" textFill="#3f105b" />
+            <Button fx:id="updatebtn" layoutX="460.0" layoutY="552.0" mnemonicParsing="false" onAction="#updateItemTable" prefHeight="35.0" prefWidth="100.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 5, 0.2, 0, 0);" stylesheets="@../../../../java/com/example/alchemyx/style/cssButtons.css" text="Update" textFill="#3f105b" />
          </children>
       </AnchorPane>
-      <ImageView fitHeight="78.0" fitWidth="81.0" layoutX="805.0" layoutY="-6.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="78.0" fitWidth="81.0" layoutX="888.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../java/com/example/alchemyx/style/profile.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="18.0" fitWidth="16.0" layoutX="790.0" layoutY="24.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="18.0" fitWidth="16.0" layoutX="873.0" layoutY="25.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../java/com/example/alchemyx/style/notification.png" />
          </image>
       </ImageView>
-      <Label layoutX="879.0" layoutY="23.0" prefHeight="21.0" prefWidth="108.0" text="Label">
-         <font>
-            <Font size="15.0" />
-         </font>
-      </Label>
+      <Button layoutX="964.0" layoutY="19.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="112.0" style="-fx-background-color: transparent;" styleClass="logout" stylesheets="@../../../../java/com/example/alchemyx/style/logout.css" />
    </children>
 </AnchorPane>
